welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: Boolean does not take parameters
  else (vuBiscuit() == true){
                            ^